Modified pervious projects and new One Spring_Profiles